[gd_scene load_steps=30 format=3 uid="uid://78hn2ffybk65"]

[ext_resource type="Script" path="res://scenes/battle/battle.gd" id="1_t264f"]
[ext_resource type="Texture2D" uid="uid://d3qjqhhdhvoth" path="res://art/bottom_scene/scene.jpg" id="1_whyga"]
[ext_resource type="Script" path="res://scripts/hand.gd" id="2_8g6ym"]
[ext_resource type="AudioStream" uid="uid://dg52du5vembdn" path="res://art/STS_Level1-2_v2.ogg" id="3_qitkg"]
[ext_resource type="Curve" uid="uid://cq3p6sqcj8et7" path="res://spread.tres" id="3_uk2ei"]
[ext_resource type="Curve" uid="uid://ygjcb50jo74b" path="res://rotation.tres" id="4_pqhqs"]
[ext_resource type="PackedScene" uid="uid://bqkrwbju4mck8" path="res://scenes/monster/monster.tscn" id="4_xxlhy"]
[ext_resource type="PackedScene" uid="uid://nadc0oxb8jid" path="res://scenes/card_target_selector/card_target_selector.tscn" id="5_386xa"]
[ext_resource type="Curve" uid="uid://c6xrn43siyrmh" path="res://height.tres" id="5_d1vqs"]
[ext_resource type="PackedScene" uid="uid://dcjodj7wgvjld" path="res://scenes/player/player.tscn" id="5_ljh07"]
[ext_resource type="Texture2D" uid="uid://k7fh5heq6t5w" path="res://art/bottom_scene/scene2.png" id="6_1yhl2"]
[ext_resource type="Script" path="res://scenes/ui/battle_ui.gd" id="6_55xhc"]
[ext_resource type="Script" path="res://scenes/monster/monster_handler.gd" id="6_jy7xv"]
[ext_resource type="Texture2D" uid="uid://comw0gr5jrbxf" path="res://art/bottom_scene/scene.png" id="7_feuil"]
[ext_resource type="Script" path="res://scenes/player/player_handler.gd" id="8_dmgm4"]
[ext_resource type="Resource" uid="uid://ccyjlmjbxsd1j" path="res://monsters/louse_defensive/louse_defensive.tres" id="10_1qio4"]
[ext_resource type="Resource" uid="uid://c56ju606ec2mc" path="res://monsters/louse_normal/louse_normal.tres" id="13_cjwsn"]
[ext_resource type="PackedScene" uid="uid://bf0p0w25ki8ff" path="res://scenes/card_ui/energy_ui.tscn" id="14_ds04n"]
[ext_resource type="Resource" uid="uid://4qo5n75hbldo" path="res://characters/Ironclad.tres" id="15_it20t"]
[ext_resource type="Theme" uid="uid://2tytydfeg3gl" path="res://main_theme.tres" id="15_w7ux2"]
[ext_resource type="Script" path="res://scenes/ui/red_flash.gd" id="19_jh8rp"]
[ext_resource type="PackedScene" uid="uid://bfp68paujyrvi" path="res://scenes/ui/battle_over_panel.tscn" id="21_auwcm"]

[sub_resource type="AtlasTexture" id="AtlasTexture_x0wpt"]
atlas = ExtResource("1_whyga")
region = Rect2(0, 0, 1922, 1139)

[sub_resource type="AtlasTexture" id="AtlasTexture_ucuyn"]
atlas = ExtResource("6_1yhl2")
region = Rect2(1495, 529, 403, 445)

[sub_resource type="AtlasTexture" id="AtlasTexture_5rgpt"]
atlas = ExtResource("7_feuil")
region = Rect2(2, 500, 1920, 771)

[sub_resource type="AtlasTexture" id="AtlasTexture_5l17u"]
atlas = ExtResource("6_1yhl2")
region = Rect2(1900, 727, 130, 247)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_txd0m"]
size = Vector2(256, 108)

[sub_resource type="InputEventKey" id="InputEventKey_g8rmm"]
device = -1
keycode = 69
unicode = 101

[sub_resource type="Shortcut" id="Shortcut_xwlpm"]
events = [SubResource("InputEventKey_g8rmm")]

[node name="Battle" type="Node2D"]
script = ExtResource("1_t264f")
char_stats = ExtResource("15_it20t")
music = ExtResource("3_qitkg")
metadata/_edit_lock_ = true

[node name="Background" type="Node2D" parent="."]
texture_filter = 2
metadata/_edit_lock_ = true

[node name="Background" type="Sprite2D" parent="Background"]
scale = Vector2(0.133301, 0.126465)
texture = SubResource("AtlasTexture_x0wpt")
centered = false
metadata/_edit_lock_ = true

[node name="Background2" type="Sprite2D" parent="Background"]
position = Vector2(144.75, 62.45)
scale = Vector2(0.134413, 0.134413)
texture = SubResource("AtlasTexture_ucuyn")
metadata/_edit_lock_ = true

[node name="Background3" type="Sprite2D" parent="Background"]
position = Vector2(128, 51.5)
scale = Vector2(0.133333, 0.133593)
texture = SubResource("AtlasTexture_5rgpt")
metadata/_edit_lock_ = true

[node name="Background4" type="Sprite2D" parent="Background"]
position = Vector2(23.5, 31)
scale = Vector2(0.123988, 0.123988)
texture = SubResource("AtlasTexture_5l17u")
metadata/_edit_lock_ = true

[node name="CardDropArea" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="CardDropArea"]
position = Vector2(128, 54)
shape = SubResource("RectangleShape2D_txd0m")
debug_color = Color(0, 0.6, 0.701961, 0.133333)

[node name="MonsterHandler" type="Node2D" parent="."]
script = ExtResource("6_jy7xv")

[node name="LouseNormal" parent="MonsterHandler" instance=ExtResource("4_xxlhy")]
position = Vector2(216, 96)
stats = ExtResource("13_cjwsn")

[node name="LouseDefensive" parent="MonsterHandler" instance=ExtResource("4_xxlhy")]
position = Vector2(188, 89)
stats = ExtResource("10_1qio4")

[node name="Player" parent="." instance=ExtResource("5_ljh07")]
position = Vector2(57, 84)

[node name="CardTargetSelector" parent="." instance=ExtResource("5_386xa")]

[node name="PlayerHandler" type="Node" parent="." node_paths=PackedStringArray("player", "hand")]
script = ExtResource("8_dmgm4")
player = NodePath("../Player")
hand = NodePath("../BattleUI/Hand")

[node name="BattleUI" type="CanvasLayer" parent="." groups=["ui_layer"]]
script = ExtResource("6_55xhc")

[node name="Hand" type="Node2D" parent="BattleUI"]
position = Vector2(116, 138)
script = ExtResource("2_8g6ym")
char_stats = ExtResource("15_it20t")
spread_curve = ExtResource("3_uk2ei")
rotation_curve = ExtResource("4_pqhqs")
height_curve = ExtResource("5_d1vqs")

[node name="EndTurnButton" type="Button" parent="BattleUI"]
unique_name_in_owner = true
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -48.0
offset_top = -32.0
offset_right = -20.0
offset_bottom = -22.0
grow_horizontal = 0
grow_vertical = 0
theme = ExtResource("15_w7ux2")
disabled = true
shortcut = SubResource("Shortcut_xwlpm")
text = "End turn"

[node name="EnergyUI" parent="BattleUI" instance=ExtResource("14_ds04n")]
offset_left = 18.0
offset_top = -32.0
offset_right = 35.0
offset_bottom = -15.0

[node name="RedFlash" type="CanvasLayer" parent="."]
layer = 2
script = ExtResource("19_jh8rp")

[node name="ColorRect" type="ColorRect" parent="RedFlash"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(1, 0.46, 0.46, 0)

[node name="Timer" type="Timer" parent="RedFlash"]
wait_time = 0.2

[node name="BattleOverLayer" type="CanvasLayer" parent="."]

[node name="BattleOverPanel" parent="BattleOverLayer" instance=ExtResource("21_auwcm")]
visible = false

[connection signal="child_order_changed" from="MonsterHandler" to="." method="_on_monsters_child_order_changed"]
